# autofeedback

./: feedback_generator.py  pyproject.toml
.ipynb_checkpoints/: __init__-checkpoint.py
autofeedback/: README.md  feedback_generator.py  preprocessors.py
autofeedback/.ipynb_checkpoints/: feedback_generator-checkpoint.py
autofeedback/autotest/: functiontests.py
autofeedback/autotest/.ipynb_checkpoints/: plotchecker-checkpoint.py  testclass-checkpoint.py  utils-checkpoint.py
autotest/: __init__.py  codecelltests.py  customtests.py  functiontests.py  variabletests.py
autotest/.ipynb_checkpoints/: __init__-checkpoint.py  functiontests-checkpoint.py  testclass-checkpoint.py  variabletests-checkpoint.py
