[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autofeedback"
version = "0.0.1"
authors = [
  { name="Kai Erik Hoff", email="kai.e.hoff@ntnu.no" },
]
description = "A package to "
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["nbgrader", "numpy"]
